Make EnabledInEditableText return false for user-triggered command and unfocused selection

Certain editing commands shouldn't be enabled when they are user-triggered and
the selection doesn't have focus. This patch adds checking of
FrameSelection::SelectionHasFocus() in EnabledInEditableText to fix
the behavior of these commands:

BackwardDelete
DeleteBackward
DeleteBackwardByDecomposingPreviousCharacter
DeleteForward
DeleteToBeginningOfLine
DeleteToBeginningOfParagraph
DeleteToEndOfLine
DeleteToEndOfParagraph
DeleteToMark
DeleteWordBackward
DeleteWordForward
ForwardDelete
IgnoreSpelling
InsertBacktab
InsertHTML
InsertLineBreak
InsertNewline
InsertParagraph
InsertTab
InsertText
MoveBackward
MoveDown
MoveForward
MoveLeft
MovePageDown
MovePageUp
MoveParagraphBackward
MoveParagraphForward
MoveRight
MoveToBeginningOfDocument
MoveToBeginningOfLine
MoveToBeginningOfParagraph
MoveToBeginningOfSentence
MoveToEndOfDocument
MoveToEndOfLine
MoveToEndOfParagraph
MoveToEndOfSentence
MoveToLeftEndOfLine
MoveToLeftEndOfLineAndModifySelection
MoveToRightEndOfLine
MoveToRightEndOfLineAndModifySelection
MoveUp
MoveWordBackward
MoveWordForward
MoveWordLeft
MoveWordRight
Yank
YankAndSelect

BUG=713607, 722925
TEST=editing/selection/arrow_key_with_unfocused_selection.html

Review-Url: https://codereview.chromium.org/2886933002
Cr-Commit-Position: refs/heads/master@{#472284}

Former-commit-id: 2e91966df2e6a57cafb584bfa72e19bc2e9bb620