third_party/WebKit/Source/core/editing/commands/EditorCommand.cpp
@@ -2051,8 +2051,11 @@ static bool EnabledCut(LocalFrame& frame, Event*, EditorCommandSource source) {
 
 static bool EnabledInEditableText(LocalFrame& frame,
                                   Event* event,
-                                  EditorCommandSource) {
+                                  EditorCommandSource source) {
   frame.GetDocument()->UpdateStyleAndLayoutIgnorePendingStylesheets();
+  if (source == kCommandFromMenuOrKeyBinding &&
+      !frame.Selection().SelectionHasFocus())
+    return false;
   return frame.GetEditor().SelectionForCommand(event).RootEditableElement();
 }
 
